# libCZI

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
Doc/: libCZI-documentation.html
Doc/html/: _3rdpartysoftware.html  accessors.html  annotated.html  annotated_dup.js  buildinglib_c_z_i.html  classes.html  classlib_c_z_i_1_1_c_dim_base-members.html  (+318 more)
Src/: .gitignore  CMakeLists.txt  Doxyfile  LibCZI-Solution.sln  build_vs2015.cmd
Src/CZICmd/: CMakeLists.txt  CZICmd.vcxproj  CZICmd.vcxproj.filters  CZIcmd.cpp  CZIcmd_Config.h.in  DisplaySettingsHelper.h  SaveBitmap.cpp  SaveBitmap.h  cmdlineoptions.cpp  cmdlineoptions.h  consoleio.cpp  consoleio.h  execute.cpp  getOpt.h  inc_CZIcmd_Config.h  inc_libCZI.h  pastes.txt  stdafx.cpp  stdafx.h  streamimpl.cpp  streamimpl.h  utils.cpp  utils.h
Src/CZICmd/rapidjson/: rapidjson.h
Src/Doc/html/: _3rdpartysoftware.html  buildinglib_c_z_i.html  classlib_c_z_i_1_1_c_dim_bounds.html  classlib_c_z_i_1_1_c_dim_coordinate.js  classlib_c_z_i_1_1_i_attachment_repository-members.html  classlib_c_z_i_1_1_i_attribute_name.js  classlib_c_z_i_1_1_i_bitmap_data.js  classlib_c_z_i_1_1_i_c_z_i_reader-members.html  classlib_c_z_i_1_1_i_channel_display_setting-members.html  classlib_c_z_i_1_1_i_dimension_channel_airyscan_settings.js  classlib_c_z_i_1_1_i_dimension_channel_info-members.html  classlib_c_z_i_1_1_i_dimension_channel_info.html  classlib_c_z_i_1_1_i_dimension_channel_info.js  classlib_c_z_i_1_1_i_dimension_channel_light_sources_setting.js  classlib_c_z_i_1_1_i_dimension_channel_polarizing_settings.html  classlib_c_z_i_1_1_i_dimension_channel_polarizing_settings.js  classlib_c_z_i_1_1_i_dimension_channel_ratio.html  classlib_c_z_i_1_1_i_dimension_channel_s_i_m_settings.html  classlib_c_z_i_1_1_i_dimension_channel_s_p_i_m_detection_settings.js  classlib_c_z_i_1_1_i_dimension_channel_s_p_i_m_illumination_settings.html  classlib_c_z_i_1_1_i_dimension_channel_s_p_i_m_illumination_settings.js  classlib_c_z_i_1_1_i_dimension_t_info-members.html  classlib_c_z_i_1_1_i_dimension_t_info.html  classlib_c_z_i_1_1_i_dimension_z_info.js  classlib_c_z_i_1_1_i_dimensions_channels_info-members.html  classlib_c_z_i_1_1_i_fast_airy_scan_settings-members.html  classlib_c_z_i_1_1_i_input_output_stream.html  classlib_c_z_i_1_1_i_instrument_objective_settings.html  classlib_c_z_i_1_1_i_single_channel_pyramid_layer_tile_accessor.html  classlib_c_z_i_1_1_i_single_channel_pyramid_layer_tile_accessor.js  classlib_c_z_i_1_1_i_single_channel_scaling_tile_accessor-members.html  classlib_c_z_i_1_1_i_single_channel_scaling_tile_accessor.html  classlib_c_z_i_1_1_i_site.html  classlib_c_z_i_1_1_i_xml_node_read.js  classlib_c_z_i_1_1_i_xml_node_rw-members.html  classlib_c_z_i_1_1_lib_c_z_i_i_o_exception.html  classlib_c_z_i_1_1_lib_c_z_i_i_o_exception.js  classlib_c_z_i_1_1_lib_c_z_i_metadata_exception-members.html  classlib_c_z_i_1_1_metadata_utils-members.html  classlib_c_z_i_1_1_metadata_utils.html  (+43 more)
Src/Doc/html/search/: all_13.js  all_19.js  all_a.js  all_b.js  all_c.js  classes_10.js  classes_6.js  enums_1.js  enums_9.js  enums_a.js  enumvalues_12.js  enumvalues_15.js  enumvalues_16.js  enumvalues_17.js  enumvalues_2.js  enumvalues_3.js  enumvalues_d.js  functions_4.js  functions_d.js  pages_0.js  variables_1.js  variables_12.js  variables_13.js  variables_15.js  variables_16.js  variables_b.js
Src/JxrDecode/: CMakeLists.txt  JxrDecode.cpp  JxrDecode.h  JxrDecode.vcxproj  JxrDecode.vcxproj.filters  stdafx.cpp  stdafx.h  targetver.h
Src/JxrDecode/Jxr/: JXRGlue.c  JXRGlue.h  JXRGlueJxr.c  JXRGluePFC.c  JXRMeta.c  JXRTestHdr.c  JXRTestTif.c  adapthuff.c  decode.c  segdec.c  strcodec.c  strdec.c  strdec_x86.c  strenc.c
Src/Test/scripts/: linux_runtests.sh  runtests.py  testdata_linux.txt  testdata_win.txt  win_runtests.cmd
Src/UnitTest/: UnitTest.vcxproj  UnitTest.vcxproj.filters  inc_libCZI.h  stdafx.cpp  stdafx.h  targetver.h  testImage.h  test_CziSubBlockDirectory.cpp  test_DimCoordinate.cpp  test_IndexSet.cpp  test_LUT.cpp  test_Splines.cpp  test_StreamImplementations.cpp  test_bitmapOperations.cpp  test_multichannelcomposite.cpp  test_reader.cpp
Src/libCZI/: BitmapOperations.cpp  BitmapOperations.h  BitmapOperations.hpp  CMakeLists.txt  CZIReader.cpp  CZIReader.h  CreateBitmap.cpp  CziAttachment.h  CziAttachmentsDirectory.cpp  CziAttachmentsDirectory.h  CziDimensionInfo.cpp  CziDimensionInfo.h  CziDisplaySettings.cpp  CziDisplaySettings.h  CziMetadata.cpp  CziMetadata.h  CziMetadataBuilder.cpp  CziMetadataBuilder.h  CziMetadataDocumentInfo.cpp  CziMetadataDocumentInfo.h  CziMetadataDocumentInfo2.cpp  CziMetadataDocumentInfo2.h  CziMetadataSegment.cpp  CziMetadataSegment.h  CziParse.cpp  CziParse.h  CziStructs.cpp  CziStructs.h  CziSubBlock.h  CziSubBlockDirectory.cpp  CziSubBlockDirectory.h  CziUtils.cpp  CziUtils.h  DimCoordinate.cpp  Doxyfile  FileHeaderSegmentData.h  ImportExport.h  IndexSet.cpp  MultiChannelCompositor.cpp  SingleChannelAccessorBase.h  (+44 more)
Src/libCZI/Doc/: 3rd_party_software.markdown  CZICmd_usage.markdown  Todos.markdown  accessors.markdown  building_libCZI.markdown  drawings.docx  image_document_concept.markdown  mainpage.markdown  multichannelcomposition.markdown  using_libCZI.markdown
Src/libCZI/Doc/Images/drawings/: VS-project.pub  VS-project_2.pub
Src/libCZI_UnitTests/: CMakeLists.txt  CMakeLists.txt.in  MockMetadataSegment.cpp  MockMetadataSegment.h  SegmentWalker.cpp  SegmentWalker.h  inc_libCZI.h  main.cpp  pch.cpp  pch.h  testImage.h  testImage1.cpp  testImageHiLo.cpp  test_CziSubBlockDirectory.cpp  test_DimCoordinate.cpp  test_DisplaySettings.cpp  test_IndexSet.cpp  test_JxrDecode.cpp  test_LUT.cpp  test_StreamImplementations.cpp  test_Utilities.cpp  test_ZstdDecode.cpp  test_bitmapOperations.cpp  test_metadatabuilder.cpp  test_metadatareading.cpp  test_multichannelcomposite.cpp  test_reader.cpp  test_splines.cpp  utils.cpp  utils.h
Src/liblibCZI/: dllmain.cpp  libCZI.h  liblibCZI.cpp  stdafx.cpp  stdafx.h  targetver.h
cmake/: ExternalEIGEN3.cmake  TestLargeFile.cmake  check_unaligned_access.cmake
(+114 files in other folders)
